vault/bsc/probes/probe_narrow_across_call.expected.stderr
<probe>:29:12: error: nullable pointer cannot be dereferenced
    return *p;         // should ERROR
           ^
1 error generated.
